# appointments

./: .env.development  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  askama.toml  bacon.toml  docker-compose.yaml  features.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yaml  deploy.yaml
.zed/: settings.json
config/: development.yaml  production.yaml  test.yaml
examples/: playground.rs
frontend/: .eslintignore  .prettierignore  eslint.config.mjs  nuxt.config.ts  package.json
frontend/app/: app.config.ts  app.vue
frontend/app/bindings/: AdminSettings.ts  AdminSettingsClientFacing.ts  AdminSettingsParams.ts  Appointment.ts  AppointmentType.ts  AppointmentsQueryParams.ts  AppointmentsResponse.ts  AvailabilityDay.ts  AvailabilityWindow.ts  BookDay.ts  BookingParams.ts  CalendarEntry.ts  CalendarSettingParams.ts  CalendarSettingType.ts  CalendarSettingsResponse.ts  CreateAppointmentTypeParams.ts  DaysHoursMinutes.ts  GoogleCalendar.ts  GoogleCalendarEvent.ts  GoogleCalendarSettings.ts  LoginResponse.ts  NormalizedAvailabilityDay.ts  OAuthState.ts  Role.ts  Status.ts  StringHash.ts  UpdateAppointmentTypeParams.ts  UserSettings.ts  UserSettingsProps.ts  WeeklyAvailabilitiesCreateUpdateParams.ts  WeeklyAvailability.ts  WeeklyAvailabilityByWeekday.ts
frontend/app/components/: AppointmentFilters.vue  AppointmentTable.vue  AppointmentTypeDeleteModal.vue  AppointmentTypeFormModal.vue  AvailabilityWindow.vue  CalendarWeekday.vue  DaysHoursMinutesFormField.vue  GoogleCalendarAdminSettingsForm.vue  GoogleCalendarIntegration.vue  InOutTransition.vue  LoadingLinear.vue  UserSettingsForm.vue  WeeklyAvailabilityCalendar.vue
frontend/app/composables/: useAPI.ts  useAdminSettingsAPI.ts  useAppointmentTypesAPI.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: forgot.vue  index.vue  login.vue  magic-link.vue  register.vue
frontend/app/stores/: appointmentType.ts  appointmentTypesAdmin.ts  user.ts  weeklyAvailability.ts
frontend/app/utils/: api.ts  constants.ts  conversions.ts  helpers.ts
migration/src/: lib.rs  m20220101_000001_users.rs  m20251014_222822_weekly_availabilities.rs  m20251015_012003_appointment_types.rs  m20251015_013448_appointments.rs  m20251030_084125_add_roles_to_user_table.rs  m20251030_091125_admin_settings.rs  m20251105_045209_google_calendars.rs  m20251105_051656_oauth_states.rs  m20251106_005544_add_google_calendar_json_to_admin_settings.rs  m20251106_105710_add_collision_and_events_to_google_calendars.rs  m20251111_073449_user_settings.rs  m20251119_034526_add_google_calendar_references_to_appointments.rs  m20251207_183850_edit_google_calendar_refresh_token_expiry_as_optional.rs  m20251207_195134_remove_google_calendars_refresh_token_expiry.rs
src/: app.rs  lib.rs  our_chrono.rs
src/common/: settings.rs
src/controllers/api/: admin_settings.rs  appointment_types.rs  appointments.rs  auth.rs  client_facing.rs  mod.rs  user_settings.rs  weekly_availabilities.rs
src/extractors/: mod.rs
src/fixtures/: appointment_types.yaml  appointments.yaml  users.yaml  weekly_availabilities.yaml
src/initializers/: admin_settings.rs  env_vars.rs  mod.rs
src/mailers/: appointments.rs  auth.rs  mod.rs
src/models/: admin_settings.rs  appointment_types.rs  appointments.rs  google_calendars.rs  mod.rs  oauth_states.rs  user_settings.rs  users.rs  weekly_availabilities.rs
src/traits/: mod.rs
src/views/: admin.rs  admin_settings.rs  appointment_types.rs  appointments.rs  auth.rs  client_facing.rs  google_calendars.rs  mod.rs  user_settings.rs
tests/models/: admin_settings.rs  appointment_types.rs  google_calendars.rs  mod.rs  users.rs  weekly_availabilities.rs
tests/requests/: admin_settings.rs  appointment_types.rs  appointments.rs  auth.rs  google_calendar.rs  mod.rs  prepare_data.rs  user_settings.rs  weekly_availabilities.rs
tpapi-fork/src/: lib.rs
(+40 files in other folders)
